--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -15,6 +15,8 @@ driver:
 
 provisioner:
   name: chef_zero
+  product_name: chef
+  product_version: <%= ENV['CHEF_VERSION'] || 'latest' %>
   log_level: debug
   attributes:
     storage:
