Add support for NVMe instances, but without EBS
See the docs for details:
https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/nvme-ebs-volumes.html

We test this with the c5d class, which is EBS-backed for its root
volume, and has one additional ephemeral instance storage device.

This currently doesn’t mount any ebs_volumes provided, however.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -52,3 +52,8 @@ suites:
       tags:
         Name: storage-nvme-test
       instance_type: i3.large
+  - name: nvme-c5d
+    driver:
+      tags:
+        Name: storage-nvme-test
+      instance_type: c5d.large
