Parallelize Travis kitchen runs
Converging the instances at the same time, but verifying them in order,
should offer a good balance of speed & clarity.

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ before_script:
 - cookstyle --version
 - foodcritic --version
 script:
+- chef exec kitchen converge -c
 - chef exec kitchen verify
 - chef exec kitchen destroy
 matrix:
