--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_install:
 - echo "client_key '$HOME/.chef/darksky.pem'" >> $HOME/.chef/knife.rb
 - chmod 600 $HOME/.chef/knife.rb $HOME/.chef/darksky.pem
 install:
+- chef gem install kitchen-ec2
 - berks
 before_script:
 - chef --version
