Update config, metadata, formatting, syntax
* Use the local Delivery config from the cookbook generator
* Rename files per generator
* Update ignore files per generator
* Clean up copyright notices

cookstyle corrections:

libraries/helpers.rb:2:1: R: [Corrected] ChefStyle/CommentFormat: Properly format header comments
^^^^^^^^^^^^^^^^^^^^^^^^^
libraries/helpers.rb:5:1: R: [Corrected] ChefStyle/CommentFormat: Properly format header comments
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
libraries/storage.rb:2:1: R: [Corrected] ChefStyle/CommentFormat: Properly format header comments
^^^^^^^^^^^^^^^^^^^^^^^^^
libraries/storage.rb:5:1: R: [Corrected] ChefStyle/CommentFormat: Properly format header comments
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
libraries/storage.rb:32:1: C: [Corrected] Layout/TrailingWhitespace: Trailing whitespace detected.
libraries/storage.rb:32:9: R: [Corrected] ChefModernize/DefinesChefSpecMatchers: ChefSpec matchers are now auto generated by ChefSpec 7.1+ and do not need to be defined in a cookbook
        elsif defined?(ChefSpec) ...
        ^^^^^^^^^^^^^^^^^^^^^^^^
recipes/default.rb:2:1: R: [Corrected] ChefStyle/CommentFormat: Properly format header comments
^^^^^^^^^^^^^^^^^^^^^^^^^
recipes/default.rb:5:1: R: [Corrected] ChefStyle/CommentFormat: Properly format header comments
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
recipes/default.rb:105:3: R: ChefCorrectness/NodeNormal: Do not use node.normal. Replace with default/override/force_default/force_override attribute levels.
  node.normal['storage']['ephemeral_mounts'] = ephemeral_mounts
  ^^^^^^^^^^^
recipes/ebs.rb:2:1: R: [Corrected] ChefStyle/CommentFormat: Properly format header comments
^^^^^^^^^^^^^^^^^^^^^^^^^
recipes/ebs.rb:5:1: R: [Corrected] ChefStyle/CommentFormat: Properly format header comments
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
recipes/ebs.rb:46:5: R: ChefCorrectness/NodeNormal: Do not use node.normal. Replace with default/override/force_default/force_override attribute levels.
    node.normal['sto

--- a/kitchen.yml
+++ b/kitchen.yml
@@ -15,8 +15,8 @@ driver:
 
 provisioner:
   name: chef_zero
-  product_name: chef
   product_version: <%= ENV['CHEF_VERSION'] || 'latest' %>
+  chef_license: accept
   attributes:
     storage:
       ebs_volumes:
@@ -27,6 +27,9 @@ provisioner:
 
 verifier:
   name: inspec
+  reporter:
+    - cli
+    - junit:test-results/acceptance/results.xml
 
 platforms:
   - name: ubuntu-16.04
