--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,25 @@
+.vagrant
 *~
 *#
 .#*
 \#*#
 .*.sw[a-z]
 *.un~
-pkg/
-
-# Berkshelf
-.vagrant
-/cookbooks
-Berksfile.lock
 
 # Bundler
 Gemfile.lock
+gems.locked
 bin/*
 .bundle/*
 
+# test kitchen
 .kitchen/
-.kitchen.local.yml
+kitchen.local.yml
 
-LATEST_CHANGELOG.md
+# Chef
+Berksfile.lock
+.zero-knife.rb
+Policyfile.lock.json
+
+# RSpec & InSpec test results
+test-results/*
