--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ env:
   matrix:
   - CHEF_VERSION=13
   - CHEF_VERSION=14
+  - CHEF_VERSION=15
 before_install:
 - openssl aes-256-cbc -K $encrypted_6bddd121d121_key -iv $encrypted_6bddd121d121_iv
   -in secrets.tar.enc -out secrets.tar -d
