Ensure automated test instances are always destroyed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,9 @@ jobs:
       - run:
           name: Acceptance
           command: chef exec delivery local acceptance
+      - run:
+          name: Cleanup
+          command: chef exec delivery local cleanup
       - store_test_results:
           path: test-results
       - store_artifacts:
