Avoid false successes in automated testing
The previous adjustment would result in a false success, since the
cleanup command will always succeed. This prevents the testing from
reporting accurately.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,7 @@ jobs:
       - run:
           name: Cleanup
           command: chef exec delivery local cleanup
+          when: always
       - store_test_results:
           path: test-results
       - store_artifacts:
